Kubernetes/appdeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-deploy
  namespace: webapp-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
        - name: webapp
          image: rkristijan/webapp:latest
