Kubernetes/mssql_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database-dep
  namespace: webapp-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: database
  template:
    metadata:
      labels:
        app: database
    spec:
      containers:
        - name: database
          image: mcr.microsoft.com/mssql/server:2022-latest
          ports:
            - containerPort: 1433
          volumeMounts:
            - mountPath: /var/opt/mssql/data
              name: sql-database
      volumes:
        - name: sql-database
          persistentVolumeClaim:
            claimName: database-claim
