Kubernetes/appservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp-service
  namespace: webapp-namespace
spec:
  type: NodePort
  selector:
    app: webapp
  ports:
    - name: webapp
      protocol: TCP
      port: 80
      targetPort: 80
      
---

apiVersion: v1
kind: Service
metadata:
  name: webapp-cluster
  namespace: webapp-namespace
spec:
  type: ClusterIP
  selector:
    app: webapp
  ports:
    - name: webapp
      protocol: TCP
      port: 80
      targetPort: 80
